@@ -11,9 +11,11 @@ import es.prw.models.Usuario;
 import es.prw.repositories.UsuarioRepository;
 import es.prw.services.PuntuacionService;
 import es.prw.services.ProgresoService;
+
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import jakarta.servlet.http.HttpSession;
+
 import java.util.*;
 
 @RestController
@@ -24,72 +26,62 @@ public class PuntuacionController {
     private final ProgresoService progresoService;
     private final UsuarioRepository usuarioRepository;
 
-    public PuntuacionController(PuntuacionService puntuacionService, ProgresoService progresoService,UsuarioRepository usuarioRepository) {
+    public PuntuacionController(PuntuacionService puntuacionService, ProgresoService progresoService, UsuarioRepository usuarioRepository) {
         this.puntuacionService = puntuacionService;
         this.progresoService = progresoService;
         this.usuarioRepository = usuarioRepository;
     }
 
+    // ✅ Guardar puntuación de un test
     @PostMapping("/guardar")
     public ResponseEntity<Map<String, String>> guardarPuntuacion(@RequestParam Integer idUsuario, @RequestParam int idTest, @RequestParam double nota) {
-        Optional<Puntuacion> puntuacion = puntuacionService.savePuntuacion(idUsuario, idTest, nota);
-
-        if (puntuacion.isPresent()) {
-            return ResponseEntity.ok(Collections.singletonMap("message", "Puntuación guardada correctamente."));
-        } else {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Collections.singletonMap("error", "No se pudo guardar la puntuación."));
-        }
+        return puntuacionService.savePuntuacion(idUsuario, idTest, nota)
+                .map(p -> ResponseEntity.ok(Map.of("message", "Puntuación guardada correctamente.")))
+                .orElse(ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("error", "No se pudo guardar la puntuación.")));
     }
 
+    // ✅ Obtener todas las puntuaciones de un usuario
     @GetMapping("/usuario/{idUsuario}")
     public ResponseEntity<List<Puntuacion>> obtenerPuntuacionesUsuario(@PathVariable Integer idUsuario) {
         List<Puntuacion> puntuaciones = puntuacionService.getPuntuacionesByUsuario(idUsuario);
         return puntuaciones.isEmpty() ? ResponseEntity.noContent().build() : ResponseEntity.ok(puntuaciones);
     }
 
+    // ✅ Obtener puntuaciones de un usuario en una materia
     @GetMapping("/materia/{idUsuario}/{idMateria}")
     public ResponseEntity<List<Puntuacion>> obtenerPuntuacionesMateria(@PathVariable Integer idUsuario, @PathVariable int idMateria) {
         List<Puntuacion> puntuaciones = puntuacionService.getPuntuacionesPorMateria(idUsuario, idMateria);
         return puntuaciones.isEmpty() ? ResponseEntity.noContent().build() : ResponseEntity.ok(puntuaciones);
     }
 
-    @GetMapping("/test/{idUsuario}/{idTest}")
-    public ResponseEntity<List<Double>> obtenerUltimasPuntuacionesTest( HttpSession session, @PathVariable int idTest) {
-    	  Usuario usuario = (Usuario) session.getAttribute("usuario");
+    // ✅ Obtener últimas puntuaciones de un test (para un usuario)
+    @GetMapping("/test/{idTest}")
+    public ResponseEntity<List<Double>> obtenerUltimasPuntuacionesTest(HttpSession session, @PathVariable int idTest) {
+        Usuario usuario = (Usuario) session.getAttribute("usuario");
+        if (usuario == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+        }
+
         List<Double> notas = puntuacionService.getUltimasPuntuacionesByTest(usuario.getIdUsuario(), idTest);
         return notas.isEmpty() ? ResponseEntity.noContent().build() : ResponseEntity.ok(notas);
     }
 
-   
-
-    // En tu método getUltimaPuntuacion
+    // ✅ Obtener última y penúltima puntuación de un test
     @GetMapping("/ultimaPuntuacion")
-    public ResponseEntity<?> getUltimaPuntuacion(@RequestParam int idTest, Authentication authentication) {
-        // En vez de (Usuario) ...
-        org.springframework.security.core.userdetails.User springUser =
-            (org.springframework.security.core.userdetails.User) authentication.getPrincipal();
-        String email = springUser.getUsername();
-        
-        // A partir de aquí, buscas al Usuario real en tu BD:
-        Usuario usuarioReal = usuarioRepository.findByEmail(email)
-            .orElseThrow(() -> new RuntimeException("Usuario no encontrado: " + email));
+    public ResponseEntity<Map<String, Object>> getUltimaPuntuacion(@RequestParam int idTest, Authentication authentication) {
+        Usuario usuario = obtenerUsuarioDesdeAuth(authentication);
 
-        // Llamar a un método que retorne las 2 últimas notas
-        List<Double> notas = puntuacionService.getUltimasPuntuacionesByTest(usuarioReal.getIdUsuario(), idTest);
+        List<Double> notas = puntuacionService.getUltimasPuntuacionesByTest(usuario.getIdUsuario(), idTest);
 
-        Map<String, Object> response = new HashMap<>();
-        if (notas.isEmpty()) {
-            response.put("ultimaNota", null);
-            response.put("penultimaNota", null);
-        } else if (notas.size() == 1) {
-            response.put("ultimaNota", notas.get(0));
-            response.put("penultimaNota", null);
-        } else {
-            response.put("ultimaNota", notas.get(0));
-            response.put("penultimaNota", notas.get(1));
-        }
+        Map<String, Object> response = Map.of(
+                "ultimaNota", notas.isEmpty() ? null : notas.get(0),
+                "penultimaNota", notas.size() > 1 ? notas.get(1) : null
+        );
+
         return ResponseEntity.ok(response);
     }
+
+    // ✅ Evaluar respuestas de un test y guardar la puntuación
 
     @PostMapping("/calcularNota")
     public ResponseEntity<Map<String, Object>> calcularNota(
@@ -147,56 +139,22 @@ public class PuntuacionController {
     }
 
 
-
-    private double calcularNotaTotal(EvaluacionDTO evaluacion, HttpSession session) {
-        if (evaluacion == null || evaluacion.getRespuestas() == null || evaluacion.getRespuestas().isEmpty()) {
-            return 0.0;
-        }
-
-        Object respuestasObj = session.getAttribute("respuestasTest_" + evaluacion.getIdTest());
-        if (!(respuestasObj instanceof List<?>)) {
-            return 0.0;
-        }
-
-        List<Respuesta> respuestasDelTest = (List<Respuesta>) respuestasObj;
-
-        return respuestasDelTest.stream()
-                .filter(r -> evaluacion.getRespuestas().contains(r.getIdRespuesta()))
-                .mapToDouble(Respuesta::getNota)
-                .sum();
-    }
-
+    // ✅ Obtener progreso en tests de un usuario
     @GetMapping("/progresoTests")
-    public ResponseEntity<Map<String, Map<String, List<Double>>>> obtenerProgresoTests(
-            Authentication authentication) {
-
-        if (authentication == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-        }
-
-        // Obtiene el usuario autenticado en Spring Security
-        org.springframework.security.core.userdetails.User springUser =
-            (org.springframework.security.core.userdetails.User) authentication.getPrincipal();
-
-        if (springUser == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Collections.emptyMap());
-        }
-
-        String email = springUser.getUsername(); // Extrae el email del usuario autenticado
-
-        // Busca el usuario real en la base de datos
-        Optional<Usuario> usuarioRealOpt = usuarioRepository.findByEmail(email);
-
-        if (usuarioRealOpt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Collections.emptyMap());
-        }
-
-        Usuario usuarioReal = usuarioRealOpt.get();
-
-        // Llama al servicio usando el ID del usuario autenticado
-        Map<String, Map<String, List<Double>>> progresoTests = progresoService.obtenerProgresoTests(usuarioReal.getIdUsuario());
-
-        return ResponseEntity.ok(progresoTests);
+    public ResponseEntity<Map<String, Map<String, List<Double>>>> obtenerProgresoTests(Authentication authentication) {
+        Usuario usuario = obtenerUsuarioDesdeAuth(authentication);
+        return ResponseEntity.ok(progresoService.obtenerProgresoTests(usuario.getIdUsuario()));
     }
 
+    // 🔹 Método privado para obtener usuario autenticado
+    private Usuario obtenerUsuarioDesdeAuth(Authentication authentication) {
+        if (authentication == null) {
+            throw new RuntimeException("Usuario no autenticado");
+        }
+
+        String email = ((org.springframework.security.core.userdetails.User) authentication.getPrincipal()).getUsername();
+
+        return usuarioRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Usuario no encontrado: " + email));
+    }
 }
